--- a/SurveyFinalAssignment.Rmd
+++ b/SurveyFinalAssignment.Rmd
@@ -5,19 +5,74 @@ output:
     theme: journal
 ---
 
-1. The Innovation panel would interview multiple people from every household, but in the case households are very large, a Kish Grid is used. Can you explain why the Kish Grid is a popular method to do within-household selection of respondents?
+**Introduction**
+
+
+
+
+
+```{r}
+require(survey)
+society <- readRDS("Understanding Society innovation pnel wave A.RDS")
+head(society)
+```
+
+**Part I**
+
+*1. The Innovation panel would interview multiple people from every household, but in the case households are very large, a Kish Grid is used. Can you explain why the Kish Grid is a popular method to do within-household selection of respondents?*
 
 
 The Kish Grid method is used to select respondents in a household at random. This method considered to lead to a random sample of household members, and avoids selection bias in the survey. 
 
 It is a popular method because when carried out correctly, it leads to (almost) equal probability sampling, something other selection methods do not obtain. Moreover, the only information you need in order to select respondents is a list containing the names of the persons in the household you want to sample. 
 
+*2. Despite the complex data structure, the design weights as included in the variable "a_psnenip_xd" have a very low variance. Can you explain why this is the case?*
 
-2. Despite the complex data structure, the design weights as included in the variable "a_psnenip_xd" have a very low variance. Can you explain why this is the case?
+Lower MSE (Lohr, p. 286), and application from IP User Guide.
 
-3. Apart from the design weight, an enumerated design weight "a_psnenip_xw" is also included. Please show using syntax in R how you can calculate this weight.
+*3. Apart from the design weight, an enumerated design weight "a_psnenip_xw" is also included. Please show using syntax in R how you can calculate this weight.*
 
 ```{r}
-society <- readRDS("Understanding Society innovation pnel wave A.RDS")
-summary(society)
+#syntax here
 ```
+
+*4. What is the proportion of employed people of working age (15-64) in the population?*
+```{r}
+#svy stuff
+```
+
+*5. Please investigate the relationship between age and household composition for the population of Great Britain.*
+43%
+
+*a. Investigate which age variable you should use*
+For householdcomposition, with/without children is key.
+Therefore, young children's ages do not matter as much, but 15-20 is expected to have more variance and should thus be over-sampled.
+
+
+*b. Construct a new variable "household_composition" from the following four variables: "a_livesp_dv, a_cohab_dv, a_single_dv, a_mastat_dv".*
+Couple (with/without children)
+Single adult (with/without children)
+Other type of household (with/without children)
+
+*c.Which weight should you use here?*
+
+
+Lastly, compute population correlation estimate.
+
+
+**Part II**
+
+*6. Not all sample members you included in questions 1-5 participated in the survey. Use the variable "a_ivfio" to investigate how many people personally conducted an interview.*
+
+```{r}
+summary(society$a_ivfio) #what's in the variable?
+adults <- sum(society$a_ivfio == "Full interview") #the full interviews with adults
+youths <- sum(society$a_ivfio ==  "Youth Interview") #the interviews with children
+sum(adults, youths) #all personally completed interviews
+```
+
+*7. Repeat your analysis under question 4. Use only the people who personally did an interview. What is your conclusion? Is there a difference between respondents and nonrespondents when it comes to their employment?*
+
+
+*8. Using only variables from this dataset, can you find variables which could potentially be useful for constructing nonresponse weights? Why these variables?*
+
