--- a/SurveyFinalAssignment.Rmd
+++ b/SurveyFinalAssignment.Rmd
@@ -7,9 +7,15 @@ output:
 
 **Introduction**
 
+The Innovation Panel is...
 
+Multi-stage sampling was used...
 
+Central to this research report are the following research questions: '...'. 
 
+First we look at the sampling design and design weights, next population estimates are computed, and finally the effect of non-response on the estimates is investigated, as well as possible sources of non-response error.
+
+The data:
 
 ```{r}
 require(survey)
@@ -18,7 +24,7 @@ society$a_dvage <- as.numeric(society$a_dvage)
 head(society)
 ```
 
-**Part I**
+**Sampling Design**
 
 *1. The Innovation panel would interview multiple people from every household, but in the case households are very large, a Kish Grid is used. Can you explain why the Kish Grid is a popular method to do within-household selection of respondents?*
 
@@ -26,6 +32,9 @@ head(society)
 The Kish Grid method is used to select respondents in a household at random. This method considered to lead to a random sample of household members, and avoids selection bias in the survey. 
 
 It is a popular method because when carried out correctly, it leads to (almost) equal probability sampling, something other selection methods do not obtain. Moreover, the only information you need in order to select respondents is a list containing the names of the persons in the household you want to sample. 
+
+
+**Design Weights**
 
 *2. Despite the complex data structure, the design weights as included in the variable "a_psnenip_xd" have a very low variance. Can you explain why this is the case?*
 
@@ -40,6 +49,8 @@ levels(society$a_gor_dv)
 # Calculate weight post-stratified for sex, age and government region.
 ```
 
+
+**Population Esitimates**
 *4. What is the proportion of employed people of working age (15-64) in the population?*
 ```{r}
 # First, we investigate the a_employ variable.
@@ -79,6 +90,8 @@ Design <- svydesign(ids=~a_hidp, strata=~a_strata, data=society, weights=~a_psne
 Nonmiss <- with(Design, subset(Design, a_employ!="refuse" & a_employ!="don\'t know"))
 svymean(~employ_dv, Design)
 # 43,3% of the population is employed.
+
+# Add 95% CI for the estimate.
 ```
 
 *5. Please investigate the relationship between age and household composition for the population of Great Britain.*
@@ -131,7 +144,7 @@ For this analysis, we want to use a weight per person (PSN), as it is impossible
 *Lastly, compute population correlation estimate.*
 
 
-**Part II**
+**Non-response**
 
 *6. Not all sample members you included in questions 1-5 participated in the survey. Use the variable "a_ivfio" to investigate how many people personally conducted an interview.*
 
