--- a/SurveyFinalAssignment.Rmd
+++ b/SurveyFinalAssignment.Rmd
@@ -183,99 +183,139 @@ Therefore, young children's ages do not matter as much, but 15-20 is expected to
 *b. Construct a new variable "household_composition" from the following four variables: "a_livesp_dv, a_cohab_dv, a_single_dv, a_mastat_dv".*
 Eurostat distinghuishes three types of variables used to descripte household composition: 
   - Household size;
+  - Number of children;
   - Household type, with levels: couple (with/without children), single adult (with/without children), other type of household (with/without children); 
 )
-  - Number of children. 
 
-First, create variable household size:
+Compute variable household size, number of children per household, household type
 ```{r}
 levels(society$a_livesp_dv)
 levels(society$a_cohab_dv)
 levels(society$a_single_dv)
 levels(society$a_mastat_dv)
 
-##### HOUSEHOLD SIZE PER HOUSEHOLD & PER PEROSN
-# Household size: count for each household, how many persons there are in. 
+##### HOUSEHOLD SIZE PER HOUSEHOLD
 # a_hidp - Household identifier
-count <- as.matrix(table(society$a_hidp)) # number of occurences of each a_hidp (indicator of size of household)
+# Household size: count for each household, how many persons there are in.
+count <- as.matrix(table(society$a_hidp)) # number of occurrences of each a_hidp (indicator of size of household)
 summary(count)
-households <- rownames(count)
+households <- rownames(count) # all household ID's
 
-# create variable to assign household size to each individual person 
-society$household_size <- NA 
-for (i in households) { # for each household..
-  society$household_size[society$a_hidp == i] <- count[i,] # maybe this can be written into nicer R code. 
+# create 'household_info' to store all the information concerning households
+# columns: household_size, number of children, children yes/no,
+household_info <- matrix(NA, length(households), 5)
+rownames(household_info) <- households
+colnames(household_info) <-
+  c("household_size",
+    "kidsperHousehold",
+    "hasKids",
+    "hasCouple",
+    "household_composition"
+  )
+
+household_info[, "household_size"] <- count
+
+##### HOUSEHOLD SIZE PER PERSON
+society$household_size <- NA
+for (i in households) {
+  # for each household..
+  society$household_size[society$a_hidp == i] <-count[i, ] # assign household size to each individual person 
 }
 
-##### NUMBER OF CHILDREN PER HOUSEHOLD 
-# table(society$a_mastat_dv[society$a_hidp == households[50]])["Child under 16"])
-countKids <- function(household) { # function that counts kids for a given household ID
-  count <- as.numeric(table(society$a_mastat_dv[society$a_hidp == household])["Child under 16"])
-  count
-}
-kidsperHousehold <- matrix(NA, length(households), 1) # empty vector to store number of kids per household 
+##### NUMBER OF CHILDREN PER HOUSEHOLD
+countKids <-
+  function(household) {
+    # function that counts kids for a given household ID
+    count <-
+      as.numeric(table(society$a_mastat_dv[society$a_hidp == household])["Child under 16"])
+    count
+  }
+
+kidsperHousehold <- matrix(NA, length(households), 1) # empty vector to store number of kids per household
 for (i in 1:length(households)) {
-  kidsperHousehold[i,1] <- countKids(households[i]) # store kids per household 
+  kidsperHousehold[i, 1] <- countKids(households[i]) # store kids per household
+}
+household_info[, "kidsperHousehold"] <- kidsperHousehold
+
+##### HOUSEHOLD TYPE
+#### children yes or no
+household_info[, "hasKids"] <- kidsperHousehold > 0 # to indicate whether household has children 0/1
+
+#### COUPLE YES/NO
+society$inacouple <- society$a_livesp_dv == "Yes" | society$a_cohab_dv == "Yes" # true for all couples
+#hasCouple <- any(society$inacouple[society$a_hidp == households[50]])
+for (i in 1:1489) {
+  household_info[i, "hasCouple"] <- any(society$inacouple[society$a_hidp == households[i]])
+}
+#### SINGLE YES/NO, OTHER..
+society$single <- society$a_single_dv == "Yes" # true for all singles
+#hasCouple <- any(society$inacouple[society$a_hidp == households[50]])
+for (i in 1:1489) {
+  household_info[i, "hasCouple"] <- any(society$inacouple[society$a_hidp == households[i]])
 }
 
-##### HOUSEHOLD TYPE 
-#### children yes or no 
-hasKids <- matrix(NA, length(households), 1)
-hasKids <- kidsperHousehold > 0 # logical to indicate whether household has children T/F
+#############################
+cwc <- matrix(NA, 1489, 1) # indicator for couples with children
+cwoc <- matrix(NA, 1489, 1) # indicator for couples without children
+swc <- matrix(NA, 1489, 1) # indicator for single adults with children
+swoc <-matrix(NA, 1489, 1) # indicator for single adults without children
+owc <- matrix(NA, 1489, 1) # indicator for other with children
+owoc <- matrix(NA, 1489, 1) # indicator for other withouth children
 
-#### COUPLE YES/NO, SINGLE YES/NO, OTHER.. 
-society$inacouple <- society$a_livesp_dv == "Yes" | society$a_cohab_dv == "Yes" # true for all couples  
-# household_type 
-# couple, single adult or other 
-# couple if a_livesp_dv == T or a_cohab_dv = TRUE, single if a_single_dv = TRUE, else assign other 
+for (i in 1:1489) {
+  cwc[i, ] <- # hasCouple = 1 and hasKids = 1
+    household_info[i, "hasCouple"] == 1 &&
+    household_info[i, "hasKids"] == 1 
+  cwoc[i, ] <- # hasCouple = 1, hasKids = 0
+    household_info[i, "hasCouple"] == 1 &&
+    household_info[i, "hasKids"] == 0 
+  swc[i, ] <- # if haskids is true and householdsize - kidsperHousehold = 1: single household with kids
+    household_info[i, "hasKids"] == 1 &&
+    as.numeric(household_info[i, "household_size"]) - as.numeric(household_info[i, "kidsperHousehold"]) == 1 
+  swoc[i, ] <- # if household size = 1 single without children.
+    household_info[i, "household_size"] == 1 
+}
 
-# with /by a_hidp, table the a_mastat_dcv 
+household_info[cwc, "household_composition"] <- "Couple with children" # Couples with children
+household_info[cwoc, "household_composition"] <- "Couple without children" # Couples without children
+household_info[swc, "household_composition"] <- "Single with children" # Single with kids
+household_info[swoc, "household_composition"] <-"Single without children" # Singles without kids
 
-society$singleadults <- society$a_single_dv == "Yes"
+for (i in 1:1489) { # create 'other'
+  owc[i, ] <- # if for the rest: hasKids = 1: other with kids
+    is.na(household_info[i, "household_composition"]) &&
+    household_info[i, "hasKids"] == 1 
+  owoc[i, ] <- # for the rest: hasKids = 0: other without kids.
+    is.na(household_info[i, "household_composition"]) &&
+    household_info[i, "hasKids"] == 0 
+}
 
+household_info[owc, "household_composition"] <- "Other with children" # Couples without children
+household_info[owoc, "household_composition"] <- "Other without children" # Couples without children
 
-#any(society$inacouple[society$a_hidp == "1701238283"])  #returns true if there's couple in this household. 
-# children yes/no
+## turn it into factor variable household_type. 
+household_type <- household_info[, "household_composition"]
 
-# calculate number of children per household 
+household_type <- factor(household_type,
+  labels = c(
+    "Couple with children",
+    "Couple without children",
+    "Single adult with children",
+    "Single adult without children",
+    "Other with children",
+    "Other without children"
+  )
+)
 
-# householdgrouper <- society$a_hidp == i # logical indicator that groups households together
-# society$a_pno[householdgrouper] # 
+table(household_type) # show how many of each category there are. 
 
-household_composition <- factor(household_composition, labels = c("Couple with children",
-                                                                  "Couple without children",
-                                                                  "Single adult with children",
-                                                                  "Single adult without children",
-                                                                  "Other with children",
-                                                                  "Other without children"))
-
-# count of children
-
-# with /by a_hidp, table the a_mastat_dcv 
-# number of children (according to eurostat properties..)
+##################################################################
 ```
-
-Couple (with/without children)
-Single adult (with/without children)
-Other type of household (with/without children)
-
-Household information data
-a_marstat - Legal marital status
-a_livesp - Living with spouse
-a_livewith - Living as part of a couple in household
-a_adresp15 - Adult responsible for child age < 15
-a_adresp17 - Adult responsible for child age < 17
-a_livesp_dv - Living with spouse
-a_cohab_dv - Living with cohabitee
-a_single_dv - Single in household
-a_mastat_dv - De facto marital status
-a_depchl_dv - Whether person is a dependent child
-a_rach16_dv - Whether responsible for a child under 16
-a_respm16_dv - Whether natural/adoptive/step mother of child under 16
-a_respf16 dv - Whether natural/adoptive/step father of child under 16
-a_nchild_dv - Number of own children in household
-a_ndepchl_dv - Number of own dependent children in household
-
+TURN THIS MATRIX INTO DATAFRAME (CHANGE CODE AS WELL.. )
+Now, we've got a matrix household_info, containing per household the following information: 
+  - Household size;
+  - Number of children;
+  - Household type, with levels: couple (with/without children), single adult (with/without children), other type of household (with/without children); 
 
 *source* https://ec.europa.eu/eurostat/statistics-explained/index.php/Household_composition_statistics
 
