--- a/SurveyFinalAssignment.Rmd
+++ b/SurveyFinalAssignment.Rmd
@@ -40,13 +40,13 @@ It is a popular method because when carried out correctly, it leads to (almost) 
 **Design Weights**
 
 *2. Despite the complex data structure, the design weights as included in the variable "a_psnenip_xd" have a very low variance. Can you explain why this is the case?*
-As the following table shows, the variance in the design weight variable is `r var(society$a_psnenip_xd)`.
+As the following table shows, the variance in the design weight variable is `r var(society$a_psnenip_xd)`. With a mean of `r mean(society$a_psnenip_xd)`, this constitutes a coefficient of variation that is only `r sqrt(var(society$a_psnenip_xd))/mean(society$a_psnenip_xd)`.
 ```{r} 
 Var. <- var(society$a_psnenip_xd) #compute variance in the design weight variable
 Descr. <- cbind(t(summary(society$a_psnenip_xd)), Var.) #combine with other descriptive statistics
 round(Descr., 2) #print with only two decimals
 ```
-The low variance is due to rescaling of the weights, as explained in the IP User Guide (p. 56): "Each set of weights has been scaled by a constant factor to produce a mean of one amongst cases eligible to receive the weight". That is, the design weights are standardized on one. Rescaling, truncating, or smoothing of weights are techniques to inhibit the effect of a single observation on population estimates and its variance. Trimming may yield biased estimates, but is shown to decrease the mean square error (MSE; Lohr, 2010). 
+Low variance can be due to the rescaling of weights, as explained in the IP User Guide (p. 56): "Each set of weights has been scaled by a constant factor to produce a mean of one amongst cases eligible to receive the weight". That is, the design weights are standardized on one. Also, the maximum value of the design weight variable suggests trimming. Trimming, truncating, or smoothing of weights are techniques to inhibit the effect of a single observation on population estimates and its variance. Trimming may yield biased estimates, but is shown to decrease the mean square error (MSE; Lohr, 2010). 
 
 *3. Apart from the design weight, an enumerated design weight "a_psnenip_xw" is also included. Please show using syntax in R how you can calculate this weight.*
 
@@ -173,7 +173,10 @@ confint(svymean(~employ_dv, Design))
 
 *5. Please investigate the relationship between age and household composition for the population of Great Britain.*
 
-*a. Investigate which age variable you should use*
+*a. Investigate which age variable you should use.*
+There are three variables in the data expressing the age of respondents. All three age variables are divided into groups also seen in the UK Labour Force Survey. The first variable, a_agegr5_dv, contains 15 categories indicating age in five-year partitions up to '70 years or older'. The variable a_agegr10_dv is highly similar, indicating age in ten-year intervals, and consisting of 8 different categories between ages zero and seventy-plus. Finally, a_agegr13_dv consists 13 levels, with unequal age intervals under the age of 20 (namely 0-15, 16-17, and 18-19 years old), five-year intervals between the ages 20 and 64, and a sigle interval containing all ages from 65 years old upward. 
+
+
 For householdcomposition, with/without children is key.
 Therefore, young children's ages do not matter as much, but 15-20 is expected to have more variance and should thus be over-sampled.
 
